--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-Projeto de curso muito legal
+Repositório do nosso projeto de curso (Business PRO)
+
+3ª INF 2025 Delcides Ferreira de Morais
+- Aline Pinheiro Linhares
+- Maria Eduarda dos Santos Pinheiro
+- Renato Augusto Almeida dos SAntos
