--- a/README
+++ b/README
@@ -4,3 +4,6 @@ Repositório do nosso projeto de curso (Business PRO)
 - Aline Pinheiro Linhares
 - Maria Eduarda dos Santos Pinheiro
 - Renato Augusto Almeida dos SAntos
+
+projeto.businesspro@gmail.com
+BusinessPro2025
